--- a/client/src/componentes/Landing/Landing.module.css
+++ b/client/src/componentes/Landing/Landing.module.css
@@ -16,9 +16,10 @@
     padding: 1.5rem;
 }
 .contenedor{
-    display: flex;
-    width: 100%;
-    height: 50rem;
+    display: block;
+    /* width: 100%; */
+    height: 0rem;
+    padding: 120px;
 }
 .contenedorLogo{
     display: flex;
@@ -39,9 +40,9 @@
     align-content: flex-start;
 }
 .home{
-    display: flex;
+    display: block ;
     align-items: center;
-    width: 50%;
+    width: 100%;
     justify-content: center;
 }
 .button{
@@ -79,6 +80,7 @@
     font-family: sans-serif	;
     font-weight: normal;
     font-size: 5rem; 
+    width:1000px;
 }
 @media screen and (max-width: 460px){
     .country{
